----Fixes---- - Fixed some responsiveness issues around 1000px and mobile viewports. - Fixed content overflow errors around status containers and switched to a grid layout. - cleaned up commit graph a bit - will be adding tooltips for each square later.

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
+
 @media (min-width: 750px) and (max-width: 1200px) {
   .dashboard {
     display: flex;
@@ -294,7 +295,7 @@ body {
 
 #social-link svg,
 #social-link-location svg {
-  font-size: 25px;
+  font-size: 26px;
   color: var(--icon-color);
 }
 
@@ -404,25 +405,33 @@ body {
   margin: 0 auto;
 }
 
-.landing-status {
-  display: inline-flex;
-  width: 100%;
+.landing-status-container {
+  display: flex;
+  width: 65%;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-radius: 8px;
+}
+
+.landing-status {
+  display: grid;
+  width: 100%;
+  grid-template-rows: repeat(auto, 1fr);
+  grid-template-columns: repeat(2, 3fr);
+  gap: 10px;
+  padding-bottom: 10px;
 }
 
 #status-text-a,
 #status-text {
-
   display: inline-flex;
-  margin-right: 20px;
+  width: fit-content;
+  height: fit-content;
   background-color: var(--component-background);
-  padding: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 50px;
+  padding: 8px;
+  border-radius: 10px;
   align-items: center;
-  justify-content: center;
   font-weight: 400;
   font-size: 1.0rem;
   color: whitesmoke;
@@ -435,7 +444,7 @@ body {
 
 #status-text:hover,
 #status-text-a:hover {
-  border: 2px solid #a871f1;
+  background: #a871f1;
   transition: ease-in 0.3s;
 }
 
@@ -486,8 +495,7 @@ body {
   height: 80px;
   align-items: center;
   justify-content: center;
-  width: 65%;
-  padding-bottom: 10px;
+  width: 80%;
   text-align: flex-start;
   color: var(--text-color);
 }
@@ -583,7 +591,7 @@ body {
   min-width: fit-content;
 }
 
-.none-email{
+.none-email {
   font-size: 1.3rem;
 }
 
@@ -605,7 +613,7 @@ body {
 }
 
 #none-email:hover {
-  
+
   text-decoration: underline;
 }
 
@@ -673,8 +681,7 @@ body {
   right: 0;
   z-index: 100;
   margin: 0 auto;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px;
 }
 
 .nav-buttons {
@@ -924,6 +931,7 @@ body {
   flex-direction: column;
   margin: 0 auto;
   width: 100%;
+  height: fit-content;
 }
 
 .About-container {
@@ -1353,6 +1361,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
 }
 
 .About-para-title,
@@ -1373,7 +1382,6 @@ body {
 .About-paragraph-text {
   color: var(--text-color);
   font-size: 1.1rem;
-  margin-left: 0px;
   justify-content: center;
   align-items: center;
   line-height: 1.6;
@@ -1394,15 +1402,7 @@ body {
   height: fit-content;
 }
 
-#about-img {
 
-  display: flex;
-  height: 200px;
-  width: 20%;
-  align-content: flex-start;
-  justify-content: flex-start;
-  border-radius: 8px;
-}
 
 #commit-graph {
   display: flex;
@@ -1417,32 +1417,40 @@ body {
   flex-direction: column;
   margin: 0 auto;
   width: 100%;
-  margin-top: 20px;
+  margin: 20px;
   justify-content: center;
   height: fit-content;
   display: flex;
   align-items: center;
-  border: 2px solid transparent;
 }
 
 .banner img,
 .about-footer img {
   width: 100%;
-  height: auto;
-  border-radius: 8px;
+  height: 250px;
+  border-radius: 5px;
 }
 
 .about-footer img {
-  filter: brightness(80%)
+  filter: brightness(80%);
 }
 
 #image-description {
-  display: flex;
+  display: inline-flex;
+  justify-content: flex-start;
+  align-items: center;
   width: 100%;
   margin: 10px;
   font-size: 1.0rem;
-  color: var(--text-color)
+  color: var(--text-color);
 }
+
+#image-description svg {
+  font-size: 1.5rem;
+  margin-right: 10px;
+  color: #a871f1;
+}
+
 
 .BackToTop {
   display: flex;
@@ -1799,22 +1807,6 @@ svg {
 }
 
 
-
-@media (min-width: 1000px) and (max-width: 1600px) {
-
-  .navigation-container {
-    width: 100%;
-  }
-
-  .navigation {
-    width: 100%;
-  }
-
-  .footer {
-    width: 77%;
-  }
-}
-
 @media (min-width: 1200px) and (max-width: 1600px) {
 
   .main-container {
@@ -1870,13 +1862,12 @@ svg {
 
 @media (min-width: 1000px) and (max-width: 1200px) {
 
-
   .main-container {
     flex-direction: column;
   }
 
   .navigation {
-    max-width: 100%;
+    width: 70%;
   }
 
   .About-status-container {
@@ -1888,6 +1879,10 @@ svg {
   .About-status {
     margin-bottom: 10px;
     margin-top: 10px;
+  }
+
+  .footer {
+    width: 70%;
   }
 
 }
@@ -1903,7 +1898,113 @@ svg {
   }
 }
 
-@media (min-width: 750px) and (max-width: 1600px) {
+
+@media (min-width: 1400px) and (max-width: 1600px) {
+
+  .main-container,
+  .projects,
+  .about,
+  .skills {
+
+    width: 60%;
+  }
+
+  .landing-paragraph {
+    width: 90%;
+  }
+
+  .navigation {
+    width: 80%;
+  }
+
+  .landing-status-container {
+    width: 100%;
+    align-items: center;
+    justify-content: flex-start;
+
+  }
+
+  .landing-status {
+    width: fit-content;
+    grid-template-rows: repeat(auto, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+  }
+
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
+
+  .landing-status-container {
+    width: 100%;
+    align-items: center;
+    justify-content: flex-start;
+
+  }
+
+  .landing-status {
+    width: fit-content;
+    grid-template-rows: repeat(auto, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+  }
+
+
+  .landing-paragraph {
+    width: 100%;
+  }
+
+  .main-container {
+
+    width: 60%;
+  }
+
+  .navigation {
+    width: 60%;
+  }
+}
+
+
+
+@media (min-width: 1000px) and (max-width: 1200px) {
+
+  .landing-status-container {
+    width: 100%;
+
+  }
+
+  .landing-status {
+    width: fit-content;
+    grid-template-rows: repeat(auto, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+  }
+
+  .landing-paragraph {
+    width: 100%;
+  }
+
+  .main-container,
+  .projects,
+  .about,
+  .skills {
+
+    width: 75%;
+  }
+
+  .navigation {
+    width: 75%;
+  }
+}
+
+
+@media (min-width: 750px) and (max-width: 1000px) {
 
   .links {
     width: 80%;
@@ -1914,18 +2015,29 @@ svg {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .landing-status {
-    display: inline-flex;
+  .landing-status-container {
     width: 100%;
+  }
+
+  .landing-status {
+    width: fit-content;
+    grid-template-rows: repeat(auto, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     flex-direction: row;
     justify-content: center;
-    padding: 10px;
+    margin-top: 20px;
+  }
+
+  #status-text,
+  #status-text-a {
+    width: fit-content;
+    height: fit-content;
   }
 
   .main-container {
     flex-direction: column;
     height: fit-content;
-    width: 70%;
+    width: 90%;
   }
 
   .socials {
@@ -2215,7 +2327,8 @@ svg {
   }
 
   .landing-paragraph {
-    height: 90px;
+    height: 100px;
+    padding-bottom: 10px;
     width: 100%;
     font-size: 1.0rem;
   }
@@ -2334,7 +2447,7 @@ svg {
 
   .banner,
   .about-footer {
-    width: 85%;
+    width: 50%;
   }
 
   .landing-grid {
@@ -2575,7 +2688,21 @@ svg {
   }
 
   #image-description {
+    display: flex;
+    height: fit-content;
+    width: 100%;
     font-size: 0.8rem;
+    justify-content: center;
+    align-items: center;
+    text-align: flex-start;
+  }
+
+  #image-description svg {
+    font-size: 2.0rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 10px;
   }
 
   .banner img {
@@ -2710,6 +2837,10 @@ svg {
     height: fit-content;
     width: 100%;
     margin: 0 auto;
+  }
+
+  .About-text {
+    margin-bottom: 20px;
   }
 
 }
